--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
 
     <footer>
-      You can get in touch with me on github <a href="https://github.com/richterdennis">github.com/richterdennis</a> or via email at <a href="mailto:goade.de@gmail.com">goade.de@gmail.com</a><br>
+      You can get in touch with me on github <a href="https://github.com/richterdennis">github.com/richterdennis</a> or via email at <a href="mailto:webmaster@dennisrichter.io">webmaster@dennisrichter.io</a><br>
     </footer>
 
   </section>
